--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <aside>
             <h2>Significado da letra</h2>
             <p>
-                A letra diz sobre a vontade repentina em meio a escuridão tanto espiritual, mental ou literaria de mudar o rumo da vida e fazer coisas únicas em meio do mundo frio e sem alma que aqui existe. Dunkelheit no português significa <strong>escuridão</strong>.
+                A letra diz sobre a vontade repentina em meio a escuridão tanto espiritual, mental ou literaria de mudar o rumo da vida e fazer coisas únicas em meio do mundo frio e sem alma que aqui existe. Dunkelheit no português significa <div id="escuro"><strong>escuridão</strong></div>.
             </p>
             <div id="varg">
                 <img src="imagens/varg.jpeg" alt="Varg Vikernes">
