mudança de imagens

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                 A letra diz sobre a vontade repentina em meio a escuridão tanto espiritual, mental ou literaria de mudar o rumo da vida e fazer coisas únicas em meio do mundo frio e sem alma que aqui existe. Dunkelheit no português significa <div id="escuro"><strong>escuridão</strong></div>.
             </p>
             <div id="varg">
-                <img src="imagens/varg.jpeg" alt="Varg Vikernes">
+                <picture>
+                    <source media="(max-width: 550px)" srcset="imagens/varg-cell.jpg">
+                    <img src="imagens/varg.jpeg" alt="Varg Vikernes">
+                </picture>
             </div>
         </aside>
     </article>
